요소 추가 및 수정
top button 추가 / special automatic slide 추가 / special button 추가

--- a/css/style2.css
+++ b/css/style2.css
@@ -22,6 +22,22 @@ button {
     padding: 0;
     cursor: pointer;
 }
+/* top button */
+#top {
+    display: inline-block;
+    background-color: #f57d1c;
+    border-radius: 40px;
+    color: white;
+
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 1000;
+}
 /* ------------------------------------------------------- */
 /* header */
 header {
@@ -160,9 +176,6 @@ header::after { content: ""; display: block; clear: both; }
     position: relative;
 }
 #banner-contents {
-    /* width: 300%;
-    position: absolute;
-    top: 0; left: 0; */
     display: flex;
     transform: translate(0, 0);
 }
