--- a/css/style1.css
+++ b/css/style1.css
@@ -22,6 +22,22 @@ button {
     padding: 0;
     cursor: pointer;
 }
+/* top button */
+#top {
+    display: inline-block;
+    background-color: #f57d1c;
+    border-radius: 40px;
+    color: white;
+
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 1000;
+}
 /* ------------------------------------------------------- */
 /* header */
 header {
@@ -72,9 +88,13 @@ header::after { content: ""; display: block; clear: both; }
 #nav::after { content: ""; display: block; clear: both; }
 #nav > ul::after { content: ""; display: block; clear: both; }
 #nav > ul {
-    width: 1200px;
+    width: 1040px;
     padding-top: 15px;
-    padding-left: 100px;
+    padding-left: 140px;
+    display: block;
+}
+#nav > ul > li:nth-child(1) {
+    margin-left: 0;
 }
 #nav > ul > li {
     float: left;
