--- a/css/style3.css
+++ b/css/style3.css
@@ -28,7 +28,22 @@ button {
     padding: 0;
     cursor: pointer;
 }
+/* top button */
+#top {
+    display: inline-block;
+    background-color: #f57d1c;
+    border-radius: 40px;
+    color: white;
 
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 1000;
+}
 /* ------------------------------------------------------- */
 /* header */
 header {
@@ -327,17 +342,25 @@ h2 {
     background-color: rgba(0,0,0,0.3);
     border-radius: 50px;
     width: 52px;
+    height: 52px;
     position: absolute;
     top: 50%;
 }
 #content > div > button:hover {
-    background-color: rgba(0,0,0,1);
+    background-color: black;
 }
 #special-prev {
-    left: 40px;
+    background-image: url('../images/prev1-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 30px;
 }
 #special-next {
     right: 40px;
+    background-image: url('../images/next1-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 30px;
 }
 .special-text {
     position: absolute;
