--- a/css/style3.css
+++ b/css/style3.css
@@ -145,29 +145,76 @@ header::after {
 #banner {
     width: 100%;
 }
-
 #banner-container {
     width: 100%;
+    height: 100%;
     overflow: hidden;
+    position: relative;
 }
-
-#banner-container>ul {
-    width: 300%;
+#banner-container > ul {
+    /* width: 200%; */
+    display: flex;
+    transform: translate(0, 0);
 }
-
-#banner-container>ul::after {
-    content: "";
+#banner-container > ul > li {
+    /* width: 50%;
+    float: left; */
+    flex: 0 0 100%;
+    list-style: none;
+}
+#banner-container > ul > li > img {
     display: block;
-    clear: both;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
-
-#banner-container>ul>li {
-    width: 33.33%;
-    float: left;
+.buttons {
+    position: absolute;
+    top: 20px;
+    width: 100%;
+    height: calc(100% - 1rem);
 }
-
-#banner-container>ul>li>img {
-    display: block;
+.prev, .next {
+    position: absolute;
+    top: 50%;
+    width: 60px;
+    height: 60px;
+    background: #fff;
+    opacity: 0.5;
+    border-radius: 50%;
+    transform: translateY(-50%);
+}
+.prev {
+    left: 7rem;
+    background-image: url('../images/prev1.png');
+    background-size: 30px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.next {
+    right: 7rem;
+    background-image: url('../images/next1.png');
+    background-size: 30px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.paginations {
+    position: absolute;
+    bottom: 20px;
+    left: 46%;
+}
+.pagination {
+    width: 15px;
+    height: 15px;
+    background: rgba(0,0,0,0.3);
+    border-radius: 50%;
+    box-shadow: 3px 4px 12px rgba(0,0,0,0.3);
+}
+.pagination:not(:last-child) {
+    margin-right: 0.8rem;
+}
+.pagination.on {
+    background: #f57d1c;
 }
 
 /* ------------------------------------------------------- */
@@ -434,7 +481,7 @@ h2 {
 #review {
     width: 100%;
     margin-top: 100px;
-    padding: 20px 20px 100px 20px;
+    padding: 20px 0px 100px 0px;
     background-color: #ffe9d9;
 }
 #review > h2 {
