style2,3 button hover 수정

--- a/css/style2.css
+++ b/css/style2.css
@@ -206,6 +206,9 @@ header::after { content: ""; display: block; clear: both; }
     border-radius: 50%;
     transform: translateY(-50%);
 }
+.prev:hover, .next:hover {
+    opacity: 1;
+}
 .prev {
     left: 1rem;
     background-image: url('../images/prev1.png');
